# AnitoWave_Adaptive

./: .gitignore  CMakeLists.txt
include/: G2P.cuh  MSBG.cuh  MultigridTransfer.cuh  P2G.cuh  Smoother.cuh  VCycle.cuh  multigrid.cuh  vtx_visualization.cuh
src/: main.cu
